Centered calculator and fixed clear function.

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <table>
+        <table class="calculator">
             <tr>
-                <div id="display"></div>
+                <div id="display" class="calculator"></div>
             </tr>
             <tr>
                 <td><button id="num1">1</button></td>
