Completed button functionality. Added keyboard support.

--- a/index.html
+++ b/index.html
@@ -14,29 +14,35 @@
                 <div id="display" class="calculator"></div>
             </tr>
             <tr>
-                <td><button id="num1">1</button></td>
-                <td><button id="num2">2</button></td>
-                <td><button id="num3">3</button></td>
+                <div id="displayResult" class="calculator"></div>
             </tr>
             <tr>
-                <td><button id="num4">4</button></td>
-                <td><button id="num5">5</button></td>
-                <td><button id="num6">6</button></td>
-            </tr>
-                <td><button id="num7">7</button></td>
-                <td><button id="num8">8</button></td>
-                <td><button id="num9">9</button></td>
-            <tr>
-                <td><button id="num0">0</button></td>
-                <td><button id="divide">/</button></td>
-                <td><button id="multiply">*</button></td>
+                <td><button class="btn">1</button></td>
+                <td><button class="btn">2</button></td>
+                <td><button class="btn">3</button></td>
             </tr>
             <tr>
-                <td><button id="add">+</button></td>
-                <td><button id="subtract">-</button></td>
-                <td><button id="clear">Clear</button></td>
-                <td><button id="equals">=</button></td>
+                <td><button class="btn">4</button></td>
+                <td><button class="btn">5</button></td>
+                <td><button class="btn">6</button></td>
             </tr>
+                <td><button class="btn">7</button></td>
+                <td><button class="btn">8</button></td>
+                <td><button class="btn">9</button></td>
+            <tr>
+                <td><button class="btn">0</button></td>
+                <td><button class="btn">.</button></td>
+                <td><button class="btn">/</button></td>
+            </tr>
+            <tr>
+                <td><button class="btn">*</button></td>
+                <td><button class="btn">+</button></td>
+                <td><button class="btn">-</button></td>
+                <td><button class="btn">Clear</button></td>
+                <td><button class="btn">=</button></td>
+                <td><button class="btn">Back</button></td>
+            </tr>
+            
         </table>
         <script src="scripts.js" async defer></script>
     </body>
