Bug fixes & Styled

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <body>
         <table class="calculator">
             <tr>
-                <div id="display" class="calculator"></div>
+               <td colspan="3" id="display"></td>
             </tr>
             <tr>
-                <div id="displayResult" class="calculator"></div>
+                <td colspan="3" id="displayResult"></td>
             </tr>
             <tr>
                 <td><button class="btn">1</button></td>
@@ -32,18 +32,19 @@
             <tr>
                 <td><button class="btn">0</button></td>
                 <td><button class="btn">.</button></td>
-                <td><button class="btn">/</button></td>
+                <td><button class="btn">+</button></td>
             </tr>
             <tr>
                 <td><button class="btn">*</button></td>
-                <td><button class="btn">+</button></td>
                 <td><button class="btn">-</button></td>
+                <td><button class="btn">/</button></td>
+            <tr>
                 <td><button class="btn">Clear</button></td>
-                <td><button class="btn">=</button></td>
                 <td><button class="btn">Back</button></td>
+                <td><button class="btn">=</button></td>
             </tr>
-            
         </table>
+        <div id="footer">Calculator by Harry Thomson. <a href="https://github.com/harrythomson1/calculator">Source Code.</a></div>
         <script src="scripts.js" async defer></script>
     </body>
 </html>
